--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -7,12 +7,13 @@
   border: 1px solid var(--border);
   background: var(--bg2);
   overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .25);
   margin: 0 auto;
   transition: .6s;
 
   &:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, .6);
+    transform: scale(1.02);
   }
 }
 .card__wrapper {
